--- a/pom.xml
+++ b/pom.xml
@@ -513,6 +513,7 @@
     <module>example</module>
     <module>testsuite</module>
     <module>microbench</module>
+    <module>osgitests</module>
     <module>all</module>
     <module>tarball</module>
   </modules>
