--- a/pom.xml
+++ b/pom.xml
@@ -501,6 +501,7 @@
     <module>handler</module>
     <module>example</module>
     <module>testsuite</module>
+    <module>testsuite-osgi</module>
     <module>microbench</module>
     <module>all</module>
     <module>tarball</module>
