--- a/pom.xml
+++ b/pom.xml
@@ -510,6 +510,7 @@
     <module>handler-proxy</module>
     <module>example</module>
     <module>testsuite</module>
+    <module>testsuite-osgi</module>
     <module>microbench</module>
     <module>all</module>
     <module>tarball</module>
