Rename maven module to better reflect usage.
Was merged by mistake before the name was adjusted. Related to d83700bd0a22dfb210dccb35eef4c6c7bcd19cdf.

--- a/pom.xml
+++ b/pom.xml
@@ -512,8 +512,8 @@
     <module>handler-proxy</module>
     <module>example</module>
     <module>testsuite</module>
+    <module>testsuite-osgi</module>
     <module>microbench</module>
-    <module>osgitests</module>
     <module>all</module>
     <module>tarball</module>
   </modules>
