--- a/testsuite-osgi/pom.xml
+++ b/testsuite-osgi/pom.xml
@@ -23,10 +23,10 @@
     <version>5.0.0.Alpha2-SNAPSHOT</version>
   </parent>
 
-  <artifactId>netty-osgitests</artifactId>
+  <artifactId>netty-testsuite-osgi</artifactId>
   <packaging>jar</packaging>
 
-  <name>Netty/OsgiTests</name>
+  <name>Netty/Testsuite/OSGI</name>
 
   <properties>
     <exam.version>4.4.0</exam.version>
