--- a/transport/pom.xml
+++ b/transport/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>io.netty</groupId>
     <artifactId>netty-parent</artifactId>
-    <version>4.0.26.Final</version>
+    <version>4.0.27.Final-SNAPSHOT</version>
   </parent>
 
   <artifactId>netty-transport</artifactId>
