--- a/transport-native-epoll/pom.xml
+++ b/transport-native-epoll/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>io.netty</groupId>
     <artifactId>netty-parent</artifactId>
-    <version>4.1.0.Beta4-SNAPSHOT</version>
+    <version>4.1.0.Beta4</version>
   </parent>
   <artifactId>netty-transport-native-epoll</artifactId>
 
@@ -126,11 +126,11 @@
               <exportAntProperties>true</exportAntProperties>
               <tasks>
                 <exec executable="sh" outputproperty="ldd_version">
-                  <arg value="-c"/>
-                  <arg value="ldd --version | head -1"/>
+                  <arg value="-c" />
+                  <arg value="ldd --version | head -1" />
                 </exec>
                 <exec executable="uname" outputproperty="uname_os_version">
-                  <arg value="-r"/>
+                  <arg value="-r" />
                 </exec>
               </tasks>
             </configuration>
