--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   <groupId>io.netty</groupId>
   <artifactId>netty-parent</artifactId>
   <packaging>pom</packaging>
-  <version>5.0.0.Alpha2-SNAPSHOT</version>
+  <version>5.0.0.Alpha2</version>
 
   <name>Netty</name>
   <url>http://netty.io/</url>
@@ -53,7 +53,7 @@
     <url>https://github.com/netty/netty</url>
     <connection>scm:git:git://github.com/netty/netty.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/netty/netty.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>netty-5.0.0.Alpha2</tag>
   </scm>
 
   <developers>
@@ -1130,31 +1130,18 @@
                 <taskdef resource="net/sf/antcontrib/antlib.xml" />
 
                 <!-- Get the information about the latest commit -->
-                <exec
-                  executable="git" outputproperty="gitOutput.lastCommit" resultproperty="gitExitCode.lastCommit"
-                  failonerror="false" failifexecutionfails="false">
+                <exec executable="git" outputproperty="gitOutput.lastCommit" resultproperty="gitExitCode.lastCommit" failonerror="false" failifexecutionfails="false">
                   <arg value="log" />
                   <arg value="-1" />
                   <arg value="--format=format:%h %H %cd" />
                   <arg value="--date=iso" />
                 </exec>
-                <propertyregex
-                  property="shortCommitHash" input="${gitOutput.lastCommit}"
-                  regexp="^([0-9a-f]+) .*$" select="\1" casesensitive="true"
-                  defaultValue="0" />
-                <propertyregex
-                  property="longCommitHash" input="${gitOutput.lastCommit}"
-                  regexp="^[0-9a-f]+ ([0-9a-f]{40}) .*$" select="\1" casesensitive="true"
-                  defaultValue="0000000000000000000000000000000000000000" />
-                <propertyregex
-                  property="commitDate" input="${gitOutput.lastCommit}"
-                  regexp="^[0-9a-f]+ [0-9a-f]{40} (.*)$" select="\1" casesensitive="true"
-                  defaultValue="1970-01-01 00:00:00 +0000" />
+                <propertyregex property="shortCommitHash" input="${gitOutput.lastCommit}" regexp="^([0-9a-f]+) .*$" select="\1" casesensitive="true" defaultValue="0" />
+                <propertyregex property="longCommitHash" input="${gitOutput.lastCommit}" regexp="^[0-9a-f]+ ([0-9a-f]{40}) .*$" select="\1" casesensitive="true" defaultValue="0000000000000000000000000000000000000000" />
+                <propertyregex property="commitDate" input="${gitOutput.lastCommit}" regexp="^[0-9a-f]+ [0-9a-f]{40} (.*)$" select="\1" casesensitive="true" defaultValue="1970-01-01 00:00:00 +0000" />
 
                 <!-- Get the information abount whether the repository is clean or dirty -->
-                <exec
-                  executable="git" outputproperty="gitOutput.repoStatus" resultproperty="gitExitCode.repoStatus"
-                  failonerror="false" failifexecutionfails="false">
+                <exec executable="git" outputproperty="gitOutput.repoStatus" resultproperty="gitExitCode.repoStatus" failonerror="false" failifexecutionfails="false">
                   <arg value="status" />
                   <arg value="--porcelain" />
                 </exec>
@@ -1341,7 +1328,7 @@
                     </goals>
                   </pluginExecutionFilter>
                   <action>
-                    <ignore/>
+                    <ignore />
                   </action>
                 </pluginExecution>
                 <pluginExecution>
@@ -1354,7 +1341,7 @@
                     </goals>
                   </pluginExecutionFilter>
                   <action>
-                    <ignore/>
+                    <ignore />
                   </action>
                 </pluginExecution>
                 <pluginExecution>
@@ -1367,7 +1354,7 @@
                     </goals>
                   </pluginExecutionFilter>
                   <action>
-                    <ignore/>
+                    <ignore />
                   </action>
                 </pluginExecution>
                 <pluginExecution>
@@ -1380,7 +1367,7 @@
                     </goals>
                   </pluginExecutionFilter>
                   <action>
-                    <ignore/>
+                    <ignore />
                   </action>
                 </pluginExecution>
                 <pluginExecution>
@@ -1393,7 +1380,7 @@
                     </goals>
                   </pluginExecutionFilter>
                   <action>
-                    <ignore/>
+                    <ignore />
                   </action>
                 </pluginExecution>
                 <pluginExecution>
@@ -1407,7 +1394,7 @@
                     </goals>
                   </pluginExecutionFilter>
                   <action>
-                    <ignore/>
+                    <ignore />
                   </action>
                 </pluginExecution>
                 <pluginExecution>
@@ -1422,7 +1409,7 @@
                     </goals>
                   </pluginExecutionFilter>
                   <action>
-                    <ignore/>
+                    <ignore />
                   </action>
                 </pluginExecution>
               </pluginExecutions>
