--- a/testsuite/pom.xml
+++ b/testsuite/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>io.netty</groupId>
     <artifactId>netty-parent</artifactId>
-    <version>5.0.0.Alpha2-SNAPSHOT</version>
+    <version>5.0.0.Alpha2</version>
   </parent>
 
   <artifactId>netty-testsuite</artifactId>
@@ -137,7 +137,7 @@
           <cases>
             <case>*</case>
           </cases>
-          <excludeCases/>
+          <excludeCases />
           <failOnNonStrict>false</failOnNonStrict>
           <skip>${skipAutobahnTestsuite}</skip>
         </configuration>
