Search for native artifacts using new layout
Look under META-INF/native/${os.classifier} first to work with a shaded
tcnative.

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -53,6 +53,10 @@
       <artifactId>log4j</artifactId>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>kr.motd.maven</groupId>
+      <artifactId>os-maven-plugin</artifactId>
+    </dependency>
   </dependencies>
 </project>
 
