--- a/codec/pom.xml
+++ b/codec/pom.xml
@@ -77,7 +77,7 @@
       <scope>test</scope>
     </dependency>
 
-    <!-- Test dependency for Bzip2Decoder -->
+    <!-- Test dependency for Bzip2 compression codec -->
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-compress</artifactId>
